--- a/src/app/features/dashboard/historical-statistics/historical-statistics.component.html
+++ b/src/app/features/dashboard/historical-statistics/historical-statistics.component.html
@@ -1,6 +1,6 @@
 <div class="history">
   <div fxLayout="row" fxLayoutAlign="center center">
-    <h2>Historical Statistics Of Cases On Monthly Basis in 2022</h2>
+    <h2>{{ content?.historical_statistics_title }}</h2>
   </div>
 
   <div
