--- a/src/app/layouts/app-layout/app-layout.component.html
+++ b/src/app/layouts/app-layout/app-layout.component.html
@@ -1,5 +1,5 @@
 <!-- Header Component Begins -->
-<app-header></app-header>
+<app-header [content]="content"></app-header>
 <!-- Header Component Begins -->
 
 <!-- Main Component Begins -->
@@ -7,5 +7,5 @@
 <!-- Main Component Ends -->
 
 <!-- Footer Component Begins -->
-<app-footer></app-footer>
+<app-footer [content]="content"></app-footer>
 <!-- Footer Component Ends -->
