--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="footer">
-  <span>Copyright © 2022, Gautam Balamurali</span>
+  <span>{{ content?.footer_label }}</span>
 </mat-toolbar>
