--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -4,7 +4,7 @@
     src="assets/images/covid19-logo.png"
     (click)="navigateToDashboard()"
   />
-  <span>Covid-19 Tracker</span>
+  <span>{{ content?.header_label }}</span>
   <span class="spacer"></span>
 </mat-toolbar>
 <mat-toolbar class="header-hidden">
