--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,3 +1,7 @@
 <mat-toolbar class="footer">
-  <span>{{ content?.footer_label }}</span>
+  <span
+    [innerHtml]="
+      content?.footer_label | formatString: { year: currentYear }:true
+    "
+  ></span>
 </mat-toolbar>
